# egfr-l858r-discovery

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
config/: docking_config.yaml  model_config.yaml  paths.yaml
docs/: AGENT.md  PROJECT_WALKTHROUGH.md
requirements/: api.txt  base.txt  ci.txt  cloud.txt  colab.txt  dashboard.txt  dev.txt  gnn.txt  ml.txt  serving.txt
scripts/: assign_splits.py  build_egfr_dataset.py  clean_bioactivity_data.py  compute_features.py  dock_generated_candidates.py  dock_library.py  download_drug_corpus.py  eval_admet.py  eval_docking_noise.py  eval_seed_stability.py  eval_selectivity.py  finetune_generator.py  fingerprint_ablation.py  generate_figures.py  prepare_docking.py  pretrain_generator.py  rank_candidates.py  relabel_covalent.py  rescore_sanity_poses.py  sample_temperature_sweep.py  sanity_check_docking.py  screen_generated.py  train_gnn.py  train_l858r_model.py  train_models.py  train_rl_generator.py
src/: __init__.py
tests/: conftest.py  test_admet_filters.py  test_agent_controller.py  test_agent_copilot.py  test_agent_guardrails.py  test_agent_report.py  test_agent_retrieval.py  test_agent_tools.py  test_api.py  test_applicability_domain.py  test_covalent.py  test_dashboard.py  test_data_cleaning.py  test_docking_b2.py  test_docking_library.py  test_docking_noise.py  test_docking_prep.py  test_fingerprint_ablation.py  test_fingerprints.py  test_generator_finetune.py  test_generator_sampling.py  test_generator_scaffold.py  test_gnina_runner.py  (+10 more)
(+81 files in other folders)
